--- a/Detyra6/style/style.css
+++ b/Detyra6/style/style.css
@@ -1,70 +1,70 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-  }
-  p{
-    color: #a5a2a8;
-    font-size: 14px;
-    line-height: 22px;
-  }
-  
-  .container{
-    background-color: #f6f6f6;
-      width: 100%;
-      height: 100vh;
-      padding: 50px 100px;
-  }
-  .header{
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;  
-  }
-  .header p{
-      margin-bottom: 30px;
-      margin-top: 30px;
-  }
-  .cards-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-  }
-  .card{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 25%;
-      /*border:1px solid black;*/
-      border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0px 2px 2px 0px #cecaca;
-  }
-  .card img{
-      width: 100%;
-      max-height: 200px;
-  }
-  .card-text{
-      background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 7% 10%;
-  }
-  .card-text h3{
-    font-weight: 400;
-  }
-  .card-text p{
-      padding: 25px 0;
-  }
-  .card-text input{
-      color: white;
-      background-color: #007bfe;
-      width: 100px;
-      padding: 10px 20px;
-      border-radius: 7px;
-      border:none;
-      cursor: pointer;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+body {
+  background-color: #f6f6f6;
+}
+p {
+  color: #a5a2a8;
+  font-size: 14px;
+  line-height: 22px;
+}
+.container {
+  max-width: 1360px;
+  min-height: 100vh;
+  margin: 50px auto;
+}
+.header {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.header p {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 25%;
+  /*border:1px solid black;*/
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 2px 2px 0px #cecaca;
+}
+.card img {
+  width: 100%;
+  max-height: 200px;
+}
+.card-text {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 7% 10%;
+}
+.card-text h3 {
+  font-weight: 400;
+}
+.card-text p {
+  padding: 25px 0;
+}
+.card-text input {
+  color: white;
+  background-color: #007bfe;
+  width: 100px;
+  padding: 10px 20px;
+  border-radius: 7px;
+  border: none;
+  cursor: pointer;
+}
