--- a/First-Template-OnClass/css/main.css
+++ b/First-Template-OnClass/css/main.css
@@ -13,57 +13,57 @@
   width: 100%;
 }
 /* Section1 */
-.section-1 {
+.introduction-section {
   margin-top: 30px;
   margin-bottom: 110px;
 }
-.section-1 .wrapper {
+.introduction-section .wrapper {
   display: flex;
 }
-.section-1 .left-side {
+.introduction-section .left-side {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-right: 50px;
 }
-.section-1 .left-side p {
+.introduction-section .left-side p {
   font-size: 18px;
   line-height: 28px;
   color: #544837;
   margin-bottom: 46px;
 }
-.section-1 .left-side h1 {
+.introduction-section .left-side h1 {
   font-weight: bold;
   font-size: 44px;
   line-height: 54px;
   color: #2f281e;
   margin-bottom: 30px;
 }
-.section-1 .left-side .inputs {
+.introduction-section .left-side .inputs {
   display: flex;
   align-items: center;
 }
-.section-1 .left-side button {
+.introduction-section .left-side button {
   border: none;
   border-radius: 5px;
   margin-right: 30px;
   width: 175px;
   height: 53px;
 }
-.section-1 .left-side a {
+.introduction-section .left-side a {
   display: flex;
   align-self: center;
 }
-.section-1 .left-side a::before {
+.introduction-section .left-side a::before {
   content: url("/First-Template-OnClass/images/orange-triangle.svg");
   margin-right: 8px;
 }
-/*Section2*/
-.section2 {
+/*features-section*/
+.features-section {
   text-align: center;
   margin-bottom: 120px;
 }
-.section2 .wrapper h1 {
+.features-section .wrapper h1 {
   max-width: calc(1080px / 2);
   margin: auto;
   text-align: center;
@@ -74,18 +74,18 @@
   justify-content: space-between;
   margin-bottom: 34px;
 }
-.section2 .card {
+.features-section .card {
   max-width: 240px;
   text-align: left;
 }
-.section2 .card img {
+.features-section .card img {
   margin-bottom: 30px;
 }
-.section2 h3 {
+.features-section h3 {
   margin-bottom: 13px;
   font-size: 22px;
 }
-.section2 button {
+.features-section button {
   display: inline-block;
   border: none;
   border-radius: 5px;
@@ -94,28 +94,28 @@
   height: 53px;
   margin-bottom: 90px;
 }
-/*Section3*/
-.section3 {
+/*section-template*/
+.section-template {
   margin-bottom: 101px;
 }
-.section3 .wrapper {
+.section-template .wrapper {
   display: flex;
   flex-direction: row;
 }
-.section3 .left-side {
+.section-template .left-side {
   margin-right: 104px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-/* .section3 h1 {
+/* .section-template h1 {
   margin-bottom: 22px;
 }
 
-.section3 .paragraphs {
+.section-template .paragraphs {
   margin-bottom: 29px;
 } */
-.section3 h5 {
+.section-template h5 {
   margin-bottom: 12px;
 }
 /*Section4*/
