--- a/Titan-PersonalTemplate-SASS/src/sass/partials/_mixins.scss
+++ b/Titan-PersonalTemplate-SASS/src/sass/partials/_mixins.scss
@@ -35,7 +35,8 @@
 ///     }
 /// }
 @mixin tablet {
-  @media only screen and (min-width: 768px) and (max-width: 990px) {
+  // @media only screen and (min-width: 768px) and (max-width: 990px) {
+  @media only screen and (max-width: 990px) {
     @content;
   }
 }
