Packages added with tablet responsive

--- a/Titan-PersonalTemplate-SASS/src/sass/main/_header.scss
+++ b/Titan-PersonalTemplate-SASS/src/sass/main/_header.scss
@@ -13,6 +13,13 @@ body {
 div {
   border-radius: 6px;
 }
+button {
+  background-color: #ec1f46;
+  padding: 10px 25px;
+  font-weight: 600;
+  color: #ffffff;
+  border-radius: 6px;
+}
 .background--primary {
   background: #ec1f46;
 }
