--- a/Titan-PersonalTemplate-SASS/src/sass/main/_main.scss
+++ b/Titan-PersonalTemplate-SASS/src/sass/main/_main.scss
@@ -5,9 +5,9 @@
     justify-content: space-between;
     margin-bottom: 40px;
     &__title {
-      font-size: 1.5em;
+      font-size: 1.5rem;
       font-weight: 700;
-      line-height: 1.875em;
+      line-height: 1.875rem;
       text-transform: uppercase;
       color: #333333;
     }
@@ -65,7 +65,7 @@
             text-align: left;
             &__price {
               font-size: 24px;
-              line-height: 2em;
+              line-height: 2rem;
               font-weight: 800;
             }
             &__price::before,
@@ -73,7 +73,7 @@
               font-size: 10px;
               display: block;
               font-weight: 400;
-              line-height: 0.85em;
+              line-height: 0.85rem;
             }
             &__price::before {
               content: "price starts as";
@@ -106,7 +106,7 @@
           justify-content: space-between;
           h4 {
             font-size: 18px;
-            line-height: 1.53em;
+            line-height: 1.53rem;
             font-weight: 600;
           }
           &__phone {
@@ -161,7 +161,7 @@
     }
     a {
       font-weight: 700;
-      font-size: 0.875em;
+      font-size: 0.875rem;
     }
     .active {
       color: #ec1f46;
@@ -172,8 +172,8 @@
   .offers-content {
     &__title {
       color: #333333;
-      font-size: 1.5em;
-      line-height: 1.875em;
+      font-size: 1.5rem;
+      line-height: 1.875rem;
       margin-bottom: 30px;
       font-weight: 700;
       text-transform: uppercase;
@@ -207,7 +207,7 @@
               align-items: center;
               margin-bottom: 22px;
               font-size: 12px;
-              line-height: 0.9em;
+              line-height: 0.9rem;
               align-items: center;
             }
             li::before {
@@ -264,6 +264,103 @@
               margin-right: 10px;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.packages {
+  .packages-wrapper {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    column-gap: 30px;
+    row-gap: 30px;
+    @include tablet {
+      grid-template-columns: 50% 50%;
+    }
+    .package-card {
+      display: grid;
+      color: #ffffff;
+      img {
+        width: 100%;
+        height: auto;
+      }
+      .package-info {
+        border-radius: 0 6px 6px 0;
+        background-color: #0a223d;
+        padding: 40px 25px 25px 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        &__intro {
+          h3 {
+            font-size: 1.125rem;
+            margin-bottom: 17px;
+            font-weight: 700;
+            line-height: 1.43rem;
+          }
+          p {
+            font-size: 0.875rem;
+            line-height: 1.43rem;
+          }
+        }
+        .package-details {
+          p {
+            font-size: 0.75rem;
+            line-height: 0.941rem;
+          }
+          p:not(:last-child) {
+            margin-bottom: 11px;
+          }
+          p::before {
+            margin-right: 14px;
+          }
+          &__location::before {
+            content: url("../images/location.svg");
+          }
+          &__guests::before {
+            content: url("../images/user-icon.svg");
+          }
+          &__room::before {
+            content: url("../images/home-icon.svg");
+          }
+        }
+        &__price {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          h2 {
+            font-size: 1.5rem;
+          }
+        }
+      }
+      &--primary {
+        grid-template-columns: 1fr 1fr;
+        img {
+          height: 100%;
+        }
+      }
+      &--secondary {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        .package-info {
+          border-radius: 0 0 6px 6px;
+        }
+      }
+      &--grid1 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        @include tablet {
+          grid-column-start: 1;
+          grid-column-end: 3;
+        }
+      }
+      &--grid2 {
+        @include tablet {
+          grid-column-start: 1;
+          grid-column-end: 2;
         }
       }
     }
