--- a/Titan-PersonalTemplate-SASS/src/sass/main/_header.scss
+++ b/Titan-PersonalTemplate-SASS/src/sass/main/_header.scss
@@ -4,6 +4,17 @@
   box-sizing: border-box;
   font-family: "Mulish", sans-serif !important;
 }
+html {
+  @include mobile {
+    font-size: 12px;
+  }
+}
+.container {
+  @include tablet {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
 header {
   background-color: #ffffff;
 }
@@ -15,7 +26,7 @@ div {
 }
 button {
   background-color: #ec1f46;
-  padding: 10px 25px;
+  padding: 0.625rem 1.5rem;
   font-weight: 600;
   color: #ffffff;
   border-radius: 6px;
@@ -27,14 +38,21 @@ button {
   color: #ffffff;
 }
 button,
-input {
+input,
+textarea {
   border: none;
   outline: none;
+  border-radius: 6px;
 }
 button:focus,
 input:focus {
   border: none;
   outline: none;
+}
+input::placeholder,
+textarea::placeholder {
+  color: #bdbdbd;
+  font-size: 12px;
 }
 a {
   text-decoration: none;
@@ -49,6 +67,9 @@ ul {
   display: flex;
   justify-content: space-between;
   padding: 40px 0;
+  @include tablet {
+    padding-right: 30px;
+  }
   &-brand {
     display: flex;
     align-items: center;
@@ -57,19 +78,21 @@ ul {
     }
   }
   &-wrapper {
-    max-width: 410px;
+    @include desktop {
+      max-width: 410px;
+    }
     width: 100%;
     .headerIntroduction-form {
       display: flex;
       &__input {
         width: 100%;
-        padding: 12px 0 12px 25px;
+        padding: 0.75rem 0 0.75rem 1.5rem;
         background-color: #f5fafe;
         border: none;
         border-radius: 6px 0 0 6px;
       }
       &__button {
-        padding: 12px 25px;
+        padding: 0.75rem 1.5rem;
         border: none;
         border-radius: 0 6px 6px 0;
       }
@@ -102,7 +125,7 @@ ul {
       @include tablet {
         width: 100%;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
       }
     }
     a {
